# autoquant

./: .gitignore  README.md  STRATEGIA.md  live_signals.py  local_autoresearch.py  orchestrator.py  prepare.py  prepare_popek_reference.py  program.md  progress.py  pyproject.toml  results.tsv  run_autoresearch.sh  strategy.py  strategy_popek_reference.py  test_robustness.py
.claude/: CLAUDE.md
tests/: test_orchestrator.py  test_prepare.py  test_strategy.py
testy/: eksperymenty_19_03.md  test_robustnosci_17_03.md
wiki/: INDEX.md  decisions.md  experiments.md  methods.md  research.md  strategy.md
